--- a/app/src/main/res/layout/list_item_eventos.xml
+++ b/app/src/main/res/layout/list_item_eventos.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list_item_eventos"
+    android:id="@+id/eventos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fontFamily="casual"
