--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -95,14 +95,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/endereco" />
 
-    <FrameLayout
-        android:id="@+id/maps"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detalhes"/>
+        app:layout_constraintTop_toBottomOf="@+id/detalhes">
+
+        <FrameLayout
+            android:id="@+id/maps"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
