--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -96,6 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/endereco" />
 
     <LinearLayout
+        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,10 +105,9 @@
 
         <FrameLayout
             android:id="@+id/maps"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+  />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
